--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,10 +116,18 @@
 
                          </LinearLayout>
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_margin="16dp"
+                        android:background="@drawable/shape3"
+                        android:elevation="4dp"
+                        android:layout_height="150dp"
+                        android:layout_below="@id/mainsurface"/>
+
                     <HorizontalScrollView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/mainsurface"
+android:visibility="invisible"
                         android:layout_marginTop="8dp">
 
                         <LinearLayout
