--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -128,9 +128,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:visibility="visible"
-                        
+                        android:elevation="5dp"
+
                         android:layout_below="@id/mainsurface"
-                        android:layout_marginTop="16dp">
+                        android:layout_marginTop="0dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -138,7 +139,7 @@
 
                             <ImageView
                                 android:layout_width="wrap_content"
-                                android:layout_height="150dp"
+                                android:layout_height="130dp"
                                 android:scaleType="centerCrop"
                                 android:src="@drawable/digitalindia"
                                 android:layout_gravity="center_vertical"
