--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -136,6 +136,14 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
+                            <ImageView
+                                android:layout_width="32dp"
+                                android:layout_height="130dp"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/digitalindia"
+                                android:layout_gravity="center_vertical"
+android:visibility="invisible"
+                                android:id="@+id/imag1eView" />
 
                             <ImageView
                                 android:layout_width="wrap_content"
