--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -180,6 +180,14 @@
                                 android:src="@drawable/nsdc" />
                         </LinearLayout>
 
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="130dp"
+                            android:layout_marginRight="16dp"
+                            android:layout_gravity="center_vertical"
+                            android:background="@drawable/shape3"
+                            android:elevation="0dp">
+
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="130dp"
@@ -187,7 +195,7 @@
                                 android:scaleType="centerCrop"
                                 android:src="@drawable/pmkvy" />
 
-
+                        </LinearLayout>
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="130dp"
