--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,7 +118,7 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="150dp"
+                        android:layout_height="180dp"
                         android:layout_below="@id/mainsurface"
                         android:layout_margin="16dp"
                         android:background="@drawable/shape3"
@@ -126,14 +126,16 @@
 
                     <HorizontalScrollView
                         android:layout_width="match_parent"
-                        android:layout_height="150dp"
+                        android:layout_height="180dp"
                         android:layout_below="@id/mainsurface"
                         android:layout_marginTop="16dp"
                         android:elevation="5dp"
+
                         android:scrollbars="none"
                         android:visibility="visible">
 
                         <LinearLayout
+                            android:layout_gravity="center_vertical"
                             android:layout_width="match_parent"
                             android:layout_height="150dp">
 
