--- a/app/src/main/res/drawable/shape31.xml
+++ b/app/src/main/res/drawable/shape31.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle" >
 
     <solid android:color="#fff"/>
-
+<stroke android:color="#d2d2d2" android:width="2dp"/>
     <corners android:radius="10dp" />
 </shape>
