--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -121,137 +121,145 @@
                         android:layout_height="180dp"
                         android:layout_below="@id/mainsurface"
                         android:layout_margin="16dp"
+                        android:visibility="gone"
                         android:background="@drawable/shape3"
                         android:elevation="4dp" />
 
                     <HorizontalScrollView
                         android:layout_width="match_parent"
-                        android:layout_height="180dp"
+                        android:layout_height="160dp"
                         android:layout_below="@id/mainsurface"
-                        android:layout_marginTop="16dp"
                         android:elevation="5dp"
 
                         android:scrollbars="none"
                         android:visibility="visible">
 
                         <LinearLayout
-                            android:layout_gravity="center_vertical"
                             android:layout_width="match_parent"
-                            android:layout_height="150dp">
+                            android:layout_height="150dp"
+                            android:layout_gravity="center_vertical">
 
                             <ImageView
                                 android:id="@+id/imag1eView"
-                                android:layout_width="32dp"
+                                android:layout_width="25dp"
                                 android:layout_height="130dp"
+
                                 android:layout_gravity="center_vertical"
                                 android:scaleType="centerCrop"
                                 android:src="@drawable/digitalindia"
-                                android:visibility="invisible" />
+                                android:visibility="gone" />
 
                             <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="130dp"
-                                android:layout_marginRight="16dp"
+                                android:layout_marginLeft="8dp"
                                 android:layout_gravity="center_vertical"
+                                android:layout_marginRight="16dp"
                                 android:background="@drawable/shape31"
                                 android:elevation="0dp">
 
                                 <ImageView
                                     android:id="@+id/imageView"
-                                    android:padding="5dp"
-                                    android:layout_width="wrap_content"
+                                    android:layout_width="180dp"
                                     android:layout_height="110dp"
-                                    android:layout_gravity="center_vertical"
+                                    android:layout_gravity="center"
                                     android:elevation="8dp"
+                                    android:layout_margin="5dp"
                                     android:scaleType="centerCrop"
                                     android:src="@drawable/digitalindia" />
                             </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="130dp"
-                            android:layout_marginRight="16dp"
-                            android:layout_gravity="center_vertical"
-                            android:background="@drawable/shape31"
-                            android:elevation="0dp">
-                            <ImageView
-                                android:padding="5dp"
-
-                                android:id="@+id/imageView2"
+                            <LinearLayout
                                 android:layout_width="wrap_content"
-                                android:layout_height="110dp"
+                                android:layout_height="130dp"
                                 android:layout_gravity="center_vertical"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/nsdc" />
-                        </LinearLayout>
+                                android:layout_marginRight="16dp"
+                                android:background="@drawable/shape31"
+                                android:elevation="0dp">
 
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="130dp"
-                            android:layout_marginRight="16dp"
-                            android:layout_gravity="center_vertical"
-                            android:background="@drawable/shape31"
-                            android:elevation="0dp">
+                                <ImageView
+                                    android:id="@+id/imageView2"
 
-                            <ImageView
-                                android:padding="5dp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="110dp"
+                                    android:layout_gravity="center_vertical"
+                                    android:padding="5dp"
+                                    android:scaleType="centerCrop"
+                                    android:src="@drawable/nsdc" />
+                            </LinearLayout>
 
+                            <LinearLayout
                                 android:layout_width="wrap_content"
-                                android:layout_height="110dp"
+                                android:layout_height="130dp"
                                 android:layout_gravity="center_vertical"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/pmkvy" />
+                                android:layout_marginRight="16dp"
+                                android:background="@drawable/shape31"
+                                android:elevation="0dp">
 
-                        </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="130dp"
-                            android:layout_marginRight="16dp"
-                            android:layout_gravity="center_vertical"
-                            android:background="@drawable/shape31"
-                            android:elevation="0dp">
-                            <ImageView
-                                android:padding="5dp"
+                                <ImageView
+                                    android:layout_width="wrap_content"
 
+                                    android:layout_height="110dp"
+                                    android:layout_gravity="center_vertical"
+                                    android:padding="5dp"
+                                    android:scaleType="centerCrop"
+                                    android:src="@drawable/pmkvy" />
+
+                            </LinearLayout>
+
+                            <LinearLayout
                                 android:layout_width="wrap_content"
-                                android:layout_height="110dp"
+                                android:layout_height="130dp"
                                 android:layout_gravity="center_vertical"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/rscit" />
-                        </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="130dp"
-                            android:layout_marginRight="16dp"
-                            android:layout_gravity="center_vertical"
-                            android:background="@drawable/shape31"
-                            android:elevation="0dp">
-                            <ImageView
-                                android:padding="5dp"
+                                android:layout_marginRight="16dp"
+                                android:background="@drawable/shape31"
+                                android:elevation="0dp">
 
+                                <ImageView
+                                    android:layout_width="wrap_content"
+
+                                    android:layout_height="110dp"
+                                    android:layout_gravity="center_vertical"
+                                    android:padding="5dp"
+                                    android:scaleType="centerCrop"
+                                    android:src="@drawable/rscit" />
+                            </LinearLayout>
+
+                            <LinearLayout
                                 android:layout_width="wrap_content"
-                                android:layout_height="110dp"
+                                android:layout_height="130dp"
                                 android:layout_gravity="center_vertical"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/csc" />
-                        </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="130dp"
-                            android:layout_marginRight="16dp"
-                            android:layout_gravity="center_vertical"
-                            android:background="@drawable/shape31"
-                            android:elevation="0dp">
+                                android:layout_marginRight="16dp"
+                                android:background="@drawable/shape31"
+                                android:elevation="0dp">
 
-                            <ImageView
-                                android:padding="5dp"
+                                <ImageView
+                                    android:layout_width="wrap_content"
 
+                                    android:layout_height="110dp"
+                                    android:layout_gravity="center_vertical"
+                                    android:padding="5dp"
+                                    android:scaleType="centerCrop"
+                                    android:src="@drawable/csc" />
+                            </LinearLayout>
+
+                            <LinearLayout
                                 android:layout_width="wrap_content"
-                                android:layout_height="110dp"
+                                android:layout_height="130dp"
                                 android:layout_gravity="center_vertical"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/tally" />
-                        </LinearLayout>
+                                android:layout_marginRight="16dp"
+                                android:background="@drawable/shape31"
+                                android:elevation="0dp">
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+
+                                    android:layout_height="110dp"
+                                    android:layout_gravity="center_vertical"
+                                    android:padding="5dp"
+                                    android:scaleType="centerCrop"
+                                    android:src="@drawable/tally" />
+                            </LinearLayout>
 
                         </LinearLayout>
                     </HorizontalScrollView>
@@ -263,7 +271,9 @@
                     android:id="@+id/aboutussurface"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="16dp"
                     android:background="@drawable/shape3"
                     android:elevation="8dp"
 
@@ -364,8 +374,9 @@
                     android:id="@+id/coursessurface"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:background="@drawable/shape3"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="16dp"                    android:background="@drawable/shape3"
                     android:elevation="4dp"
                     android:orientation="vertical"
                     android:transitionName="@string/simple1">
@@ -462,8 +473,9 @@
                     android:id="@+id/paperssurface"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:background="@drawable/shape3"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="16dp"                    android:background="@drawable/shape3"
                     android:elevation="4dp"
                     android:orientation="vertical"
                     android:transitionName="@string/simple7">
@@ -531,7 +543,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="16dp"
+                    android:layout_margin="32dp"
                     android:fontFamily="sans-serif-condensed"
                     android:text="App made by Nishant Singh Hada"
                     android:textAllCaps="true"
