--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,9 +110,11 @@
                             android:layout_gravity="center"
                             android:layout_marginTop="-8dp"
 
-                            android:text="RSCIT-TALLY-hardware "
+                            android:text="provide SBI Fastag\nthrough csc"
                             android:textAllCaps="true"
-                            android:textColor="#0FE2F0"
+                            android:textAlignment="center"
+                            android:textStyle="bold"
+                            android:textColor="@color/orange"
                             android:textSize="20sp" />
 
                     </LinearLayout>
