--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,13 +109,20 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_marginTop="-8dp"
-
+android:visibility="gone"
                             android:text="provide SBI Fastag\nthrough csc"
                             android:textAllCaps="true"
                             android:textAlignment="center"
                             android:textStyle="bold"
                             android:textColor="@color/orange"
                             android:textSize="20sp" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="120dp"
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginRight="16dp"
+                            android:src="@drawable/fast"/>
 
                     </LinearLayout>
 
@@ -151,6 +158,8 @@
                                 android:scaleType="centerCrop"
                                 android:src="@drawable/digitalindia"
                                 android:visibility="gone" />
+
+
 
                             <LinearLayout
                                 android:layout_width="wrap_content"
