--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -125,6 +125,11 @@ android:visibility="gone"
                             android:src="@drawable/fast"/>
 
                     </LinearLayout>
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="know about fastag"
+                        android:id="@+id/fastag"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -160,6 +165,25 @@ android:visibility="gone"
                                 android:visibility="gone" />
 
 
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="130dp"
+                                android:layout_marginLeft="8dp"
+                                android:visibility="gone"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginRight="16dp"
+                                android:background="@drawable/shape31"
+                                android:elevation="0dp">
+
+                                <ImageView
+                                    android:id="@+id/imageView0"
+                                    android:layout_width="180dp"
+                                    android:layout_height="110dp"
+                                    android:layout_gravity="center"
+                                    android:elevation="8dp"
+                                    android:layout_margin="5dp"
+                                    android:src="@drawable/fast" />
+                            </LinearLayout>
 
                             <LinearLayout
                                 android:layout_width="wrap_content"
