--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,7 @@
                                 android:text="JREC"
                                 android:fontFamily="monospace"
                                 android:textAllCaps="true"
-                                android:textColor="@color/darkorange"
+                                android:textColor="#fff"
                                 android:textSize="75sp"
                                 android:textStyle="bold"
 
@@ -88,10 +88,10 @@
                                     android:fontFamily="sans-serif-condensed"
                                     android:text="computer"
                                     android:textAllCaps="true"
-                                    android:textColor="@color/darkorange"
+                                    android:textColor="#fff"
                                     android:textSize="30sp"
 
-                                    android:textStyle="bold" />
+                                    android:textStyle="" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -102,10 +102,10 @@
                                     android:fontFamily="sans-serif-condensed"
                                     android:text="education"
                                     android:textAllCaps="true"
-                                    android:textColor="@color/darkorange"
+                                    android:textColor="#fff"
                                     android:textSize="30sp"
 
-                                    android:textStyle="bold" />
+                                    android:textStyle="" />
                             </LinearLayout>
                         </LinearLayout>
 
